// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerHeader renders with color 1`] = `
<div
  className="ax-panel__header"
>
  <div
    className="ax-grid__container ax-space--medium"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--shrink ax-grid--vertical-middle"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-color-picker__option ax-color-picker__option--blue"
          onClick={[Function]}
          style={
            Object {
              "borderWidth": "0.1875rem",
              "height": ".75rem",
              "width": ".75rem",
            }
          }
        />
      </div>
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <h3
          className="ax-heading ax-heading--title ax-space--tiny"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPickerHeader renders with defaultProps 1`] = `
<div
  className="ax-panel__header"
>
  <div
    className="ax-grid__container ax-space--medium"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--shrink ax-grid--vertical-middle"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-color-picker__option ax-color-picker__option--empty"
          onClick={[Function]}
          style={
            Object {
              "borderWidth": "0.1875rem",
              "height": ".75rem",
              "width": ".75rem",
            }
          }
        />
      </div>
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <h3
          className="ax-heading ax-heading--title ax-space--tiny"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DataPickerHeader renders with headerText 1`] = `
<div
  className="ax-panel__header"
>
  <div
    className="ax-grid__container ax-space--medium"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--shrink ax-grid--vertical-middle"
    >
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-color-picker__option ax-color-picker__option--empty"
          onClick={[Function]}
          style={
            Object {
              "borderWidth": "0.1875rem",
              "height": ".75rem",
              "width": ".75rem",
            }
          }
        />
      </div>
      <div
        className="ax-grid__cell"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <h3
          className="ax-heading ax-heading--title ax-space--tiny"
        >
          Test
        </h3>
      </div>
    </div>
  </div>
</div>
`;
